// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Tests renders the Header component 1`] = `
Object {
  "children": Array [
    <section
      className="sc-dkrFOg sc-eDvSVe gYraVE iRTugX"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <section
          className="sc-bcXHqe bwjlDT"
        >
          <img
            alt="Pizza logo"
            height="54.5"
            src="main-logo.svg"
            width="38"
          />
          <div>
            <h1
              className="sc-gswNZR gWFkxJ"
            >
              Pizza Place
            </h1>
            <p>
              the most delicious pizzas in town
            </p>
          </div>
        </section>
      </a>
      <section
        className="sc-jSUZER jAeLAN"
      >
        <svg
          className="sc-gKPRtg cMcVRX"
          fill="currentColor"
          height="1em"
          mode=""
          onClick={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
          />
        </svg>
        <a
          className="sc-ftTHYK sc-jrcTuL KXpKQ cKUqLm"
          data-testid="cartLink"
          href="/cart"
          onClick={[Function]}
        >
          <span>
            0
             $
          </span>
          <div
            className="sc-iBYQkv iTPFCD"
          />
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
            />
          </svg>
          <span>
            0
          </span>
        </a>
      </section>
    </section>,
  ],
  "props": Object {
    "className": "sc-hLBbgP iodrKd",
  },
  "type": "header",
}
`;

exports[`Header Tests renders the Header component on the Cart page 1`] = `
Object {
  "children": Array [
    <section
      className="sc-dkrFOg sc-eDvSVe gYraVE cvniFy"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <section
          className="sc-bcXHqe bwjlDT"
        >
          <img
            alt="Pizza logo"
            height="54.5"
            src="main-logo.svg"
            width="38"
          />
          <div>
            <h1
              className="sc-gswNZR gWFkxJ"
            >
              Pizza Place
            </h1>
            <p>
              the most delicious pizzas in town
            </p>
          </div>
        </section>
      </a>
      <section
        className="sc-jSUZER jAeLAN"
      >
        <svg
          className="sc-gKPRtg jvGLTl"
          fill="currentColor"
          height="1em"
          mode="cart"
          onClick={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
          />
        </svg>
      </section>
    </section>,
  ],
  "props": Object {
    "className": "sc-hLBbgP iodrKd",
  },
  "type": "header",
}
`;
